# hydroponics

./: .env  .gitignore  .pylintrc  CMakeLists.txt  Makefile  common.h  copy_pi.sh  ec.c  ec.h  main.c  requirements.txt  requirements_apt.sh  uart.c  uart.h
.devcontainer/: Dockerfile  devcontainer.json
catkin_ws/: .gitignore
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/avrhydroponics/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/avrhydroponics/config/: ec_ph.yaml  rom.yaml  serial.yaml
catkin_ws/src/avrhydroponics/launch/: complete_without_gui.launch
catkin_ws/src/avrhydroponics/msg/: AirMetrics.msg  LedMetrics.msg  Packet.msg  WaterMetrics.msg  ds18b20.msg
catkin_ws/src/avrhydroponics/nodes/: bme280_node  ds18b20_node  ec_ph_node  gui_node  led_metrics_node  light_node  mcp3221_ec_node  mcp3221_ph_node  receiver_node  relay_node  test_node  transmitter_node  water_temperature_node
catkin_ws/src/avrhydroponics/src/avrhydroponics/: gui.py  pkt.py
catkin_ws/src/avrhydroponics/srv/: SendPacket.srv
docs/source/: Doxyfile  conf.py  index.rst
include/: cobs.h  common.h  ec.h  led.h  owi.h  packet.h  packet_handler.h  ph.h  pwm.h  relays.h  return.h  serial.h  twi.h  uart.h
scripts/: gui.py  receiver.py  sensor.py
src/Firmware/: cobs.c  ec.c  led.c  main.c  owi.c  packet.c  packet_handler.c  ph.c  pwm.c  relays.c  serial.c  twi.c  uart.c
